Corrijo issue en Contador, agrego metodos para disminuir vida en el rival haciendo click en la mascota propia, agrando font-size de vida, le doy a Ring la logica para renderizar varios escenarios (juego en proceso, victoria de uno o victoria del otro). Una vez que alguien llega a 5 victorias, se presenta al ganador y luego de unso segundos se reinicia. Si se llega a 6, se reinicia instantaneamente. Agrego fotos a repositorio que tal vez use mas adelante. Voy actualizando actions y reducers. Circunstancialmente uno los reducers en uno solo, esto es porque necesitaba afectar ambos states en varias de los reducers, y no estaba pudiendo acceder al state ajeno. Arreglarlo cuando encuentre como.

--- a/src/components/styles/Ring.module.css
+++ b/src/components/styles/Ring.module.css
@@ -5,7 +5,15 @@
     height: 80%;
     width: 80%;
     border-radius: 2%;
+}
 
+.containerGameOver {
+    background: rgba(255, 255, 255, 0.527);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 80%;
+    width: 80%;
+    border-radius: 2%;
 }
 
 .ringContainer {
