--- a/src/components/styles/Gato.module.css
+++ b/src/components/styles/Gato.module.css
@@ -4,6 +4,14 @@
 
 .vida {
     color: white;
-    font-size: 32px;
+    font-size: 1.5em;
     font-weight: bold;
+}
+
+.labelAtaque2 {
+    font-size: 1em;
+    border-radius: 5%;
+    padding: 10px;
+    box-shadow: 1px 1px 1px rgba(255, 255, 255, 0.74);
+    background: rgba(255, 255, 255, 0.616)
 }
