--- a/src/components/styles/Ring.module.css
+++ b/src/components/styles/Ring.module.css
@@ -5,6 +5,7 @@
     height: 80%;
     width: 80%;
     border-radius: 2%;
+    position: relative;
 }
 
 .containerGameOver {
@@ -19,11 +20,66 @@
 .ringContainer {
     height: 100%;
     width: 100%;    
-    display: flex;
-    flex-direction: row;
-    align-items: center
+    display: grid;
+    grid-template: 1fr / 1fr 1fr;
+    position: relative;
 }
 
 .peleador {
-    width: 50%
+    height: 100%;
+    display: grid;
+    align-content: center;
+    justify-items: center;
+}
+
+.atacado {
+    animation: atacado 0.1s ease 0.1s 8;
+}
+
+@keyframes atacado {
+    from {
+        background-color: rgba(255, 255, 255, 0.747);
+    }
+    to {        
+        background-color: rgba(255, 255, 255, 0.219);
+    }
+}
+
+
+
+.gracias {
+    height: 0;
+	display: grid;
+    background: rgb(255, 255, 255);
+	visibility: hidden;
+    align-content: center;
+    text-align: center;
+}
+
+.gracias.active {
+    animation: popUp 0.5s ease 1s 2 alternate;
+    visibility: hidden;
+}
+
+
+@keyframes popUp {
+    from {
+        visibility: visible;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+    }
+
+    to {
+        visibility: visible;
+        opacity: 1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+    }
 }
