--- a/src/containers/styles/Pelea.module.css
+++ b/src/containers/styles/Pelea.module.css
@@ -1,8 +1,7 @@
 .container {
-    height: 85%;
+    box-sizing: border-box;
+    height: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    top: 4%
 }
